--- a/index.html
+++ b/index.html
@@ -242,33 +242,17 @@
         class="my-5 mx-auto md:flex md:flex-row md:justify-center items-center"
       >
         <!-- Image -->
-        <div class="mb-4 md:mr-2" data-aos="fade-up-right">
+        <div class="mb-4 w-72 md:mr-2" data-aos="fade-up-right">
           <img
-            src="https://tecdn.b-cdn.net/img/new/standard/city/047.jpg"
+            src="imgs/clients_berraka_logo.webp"
             class="h-auto max-w-full rounded-lg"
             alt=""
           />
         </div>
         <!-- Image -->
-        <div class="mb-4 md:mr-2" data-aos="fade-down">
+        <div class="mb-4 w-72 md:mr-2" data-aos="fade-down">
           <img
-            src="https://tecdn.b-cdn.net/img/new/standard/city/047.jpg"
-            class="h-auto max-w-full rounded-lg"
-            alt=""
-          />
-        </div>
-        <!-- Image -->
-        <div class="mb-4 md:mr-2" data-aos="fade-up">
-          <img
-            src="https://tecdn.b-cdn.net/img/new/standard/city/047.jpg"
-            class="h-auto max-w-full rounded-lg"
-            alt=""
-          />
-        </div>
-        <!-- Image -->
-        <div class="mb-4 md:mr-2" data-aos="fade-up-left">
-          <img
-            src="https://tecdn.b-cdn.net/img/new/standard/city/047.jpg"
+            src="imgs/clients_ump6_logo.webp"
             class="h-auto max-w-full rounded-lg"
             alt=""
           />
@@ -422,7 +406,7 @@
             type="submit"
             class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-green-700 sm:w-fit hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
           >
-            Send message
+            Demander un rappel
           </button>
         </form>
       </div>
