--- a/old-index.html
+++ b/old-index.html
@@ -16,7 +16,7 @@
     <title>Lamission1</title>
   </head>
   <body class="bg-gray-100 overflow-x-hidden">
-    <!-- Navbar -->
+    <!-- Header -->
     <nav
       class="bg-gray-100 md:h-24 text-dark md:fixed md:top-0 md:flex items-center justify-between md:w-full md:shadow-md md:z-10"
     >
@@ -67,14 +67,70 @@
             >Qui sommes-nous ?</a
           >
           <a href="#nos-services" class="py-2 px-3 block">Nos services</a>
+          <!-- Dropdown Menu -->
+          <!-- <div class="relative z-10">
+            <button
+              class="dropdown-toggle py-2 px-3 hover:bg-gray-100 flex items-center gap-2 rounded"
+              onclick="toggleDropdown()"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <span class="pointer-events-none">Services</span>
+              <svg
+                class="w-3 h-3 pointer-events-none"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+              >
+                <title>chevron-down</title>
+                <g fill="none">
+                  <path
+                    d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </g>
+              </svg>
+            </button>
+            <div
+              id="dropdownMenu"
+              class="dropdown-menu absolute hidden bg-gray-100 text-dark shadow-md rounded-b-lg pb-2 w-48"
+            >
+              <a href="#" class="block px-6 py-2 hover:bg-gray-200"
+                >Web Design</a
+              >
+              <a href="#" class="block px-6 py-2 hover:bg-gray-200"
+                >Development</a
+              >
+              <a href="#" class="block px-6 py-2 hover:bg-gray-200">SEO</a>
+            </div>
+          </div> -->
           <a href="#clients" class="py-2 px-3 block">Clients</a>
           <a href="#nous-contacter" class="py-2 px-3 block">Nous contacter</a>
         </div>
       </div>
     </nav>
+    <!-- Langs form -->
+    <!-- <div class="md:relative">
+      <form
+        class="max-w-xs mx-auto md:absolute md:right-8 md:-top-6 md:z-9 md:mt-0 md:my-0 flex flex-row justify-end shadow-sm"
+      >
+        <select
+          id="countries"
+          name="lang"
+          class="bg-gray-50 border-0 text-gray-900 text-sm rounded-lg focus:ring-0 focus:border-green block w-28 p-2.5"
+          onchange="changeLanguage()"
+        >
+          <option value="fr" selected>Francais</option>
+          <option value="eng">Anglais</option>
+        </select>
+      </form>
+    </div> -->
 
-    <!-- Qui somme nous -->
-    <div id="qui-sommes-nous" class="overflow-x-hidden md:overflow-x-visible">
+    <div id="qui-sommes-nous" class="overflow-x-hidden">
       <!-- Home Heading -->
       <div
         class="my-5 mx-auto md:mt-28 md:flex md:flex-row md:justify-center items-center"
@@ -124,15 +180,11 @@
       </div>
     </div>
 
-    <!-- Services -->
-    <div
-      id="nos-services"
-      class="overflow-x-hidden md:overflow-x-visible"
-      data-aos="fade-up"
-    >
+    <div id="nos-services">
       <!-- About Heading -->
       <div
         class="my-5 mx-auto md:mt-28 md:flex md:flex-row md:justify-center items-center overflow-x-hidden"
+        data-aos="fade-up"
       >
         <h1
           class="alternategotno1d text-center md:text-center uppercase font-bold text-2xl md:text-2xl flex items-center justify-center md:justify-start md:h-full overflow-x-hidden"
@@ -142,7 +194,9 @@
         </h1>
       </div>
       <!-- About Container -->
-      <div class="home-section px-5 my-5 md:mt-10 md:px-12 mx-auto">
+      <div
+        class="home-section px-5 my-5 md:mt-10 md:px-12 mx-auto overflow-x-hidden"
+      >
         <div
           class="my-5 mx-auto md:flex md:flex-row md:justify-center items-center"
         >
@@ -181,10 +235,10 @@
       </div>
     </div>
 
-    <!-- Clients -->
+    <!-- Clients Container -->
     <div
       id="clients"
-      class="px-5 my-5 md:mt-10 md:px-12 mx-auto overflow-x-hidden md:overflow-x-visible"
+      class="home-section px-5 my-5 md:mt-10 md:px-12 mx-auto overflow-x-hidden"
     >
       <!-- Clients Heading -->
       <div
@@ -198,7 +252,7 @@
         </h1>
       </div>
       <div
-        class="my-5 mx-auto flex flex-col justify-center items-center md:flex-row md:justify-center md:items-center overflow-x-hidden md:overflow-x-visible"
+        class="my-5 mx-auto md:flex md:flex-row md:justify-center md:items-center overflow-x-hidden"
       >
         <!-- Image -->
         <div class="mb-4 w-72 md:mr-2" data-aos="fade-up-right">
@@ -220,10 +274,7 @@
     </div>
 
     <!-- Contact Heading -->
-    <div
-      id="nous-contacter"
-      class="bg-white dark:bg-gray-900 overflow-x-hidden md:overflow-x-visible md:overflow-y-hidden"
-    >
+    <section id="contact" class="bg-white dark:bg-gray-900 overflow-x-hidden">
       <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
         <h2
           class="alternategotno1d mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white"
@@ -238,12 +289,8 @@
           Rejoignez-nous dans cette aventure passionnante et laissez-nous vous
           accompagner vers de nouveaux sommets de réussite.
         </p>
-        <form
-          action="#"
-          class="akziden space-y-8 overflow-x-hidden"
-          data-aos="fade-up"
-        >
-          <div>
+        <form action="#" class="akziden space-y-8 overflow-x-hidden">
+          <div data-aos="fade-up">
             <label
               for="email"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -257,7 +304,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="fullname"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -271,7 +318,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="entreprise"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -285,7 +332,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="tel"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -299,7 +346,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="email"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -313,7 +360,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="fonction"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -327,7 +374,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="section"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -341,7 +388,7 @@
               required
             />
           </div>
-          <div>
+          <div data-aos="fade-up">
             <label
               for="pays"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
@@ -354,7 +401,7 @@
               placeholder="Votre pays"
             />
           </div>
-          <div class="sm:col-span-2">
+          <div data-aos="fade-up" class="sm:col-span-2">
             <label
               for="message"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400"
@@ -368,6 +415,7 @@
             ></textarea>
           </div>
           <button
+            data-aos="fade-up"
             type="submit"
             class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-green-700 sm:w-fit hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
           >
@@ -375,7 +423,7 @@
           </button>
         </form>
       </div>
-    </div>
+    </section>
 
     <!-- Footer section -->
 
@@ -391,7 +439,7 @@
           />
         </div>
         <div
-          class="flex flex-col gap-6 md:flex md:flex-row md:justify-center md:items-center md:gap-6 text-dark text-sm"
+          class="md:flex md:flex-row md:justify-center md:items-center md:gap-6 text-dark text-sm"
         >
           <p>Address: Rabat, Maroc</p>
           <p>Phone: +1234567890</p>
@@ -399,8 +447,45 @@
         </div>
       </div>
     </footer>
+
     <!-- Scripts section -->
-    <script src="js/script.js"></script>
+    <script>
+      function toggleDropdown() {
+        const dropdownMenu = document.getElementById("dropdownMenu");
+        dropdownMenu.classList.toggle("hidden");
+        const button = document.querySelector(".dropdown-toggle");
+        const expanded =
+          button.getAttribute("aria-expanded") === "true" || false;
+        button.setAttribute("aria-expanded", !expanded);
+      }
+    </script>
+
+    <script>
+      // Mobile menu toggle
+      const mobileMenuButton = document.querySelector(".mobile-menu-button");
+      const mobileMenu = document.querySelector(".navigation-menu");
+
+      mobileMenuButton.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    </script>
+    <!-- Changing langs -->
+    <script>
+      function changeLanguage() {
+        var selectElement = document.getElementById("language-select");
+        var selectedLanguage = selectElement.value;
+
+        // Hide/show content based on language selection
+        if (selectedLanguage === "en") {
+          document.querySelectorAll("english-content").style.display = "block";
+          document.querySelectorAll("french-content").style.display = "none";
+        } else if (selectedLanguage === "fr") {
+          document.querySelectorAll("english-content").style.display = "none";
+          document.querySelectorAll("french-content").style.display = "block";
+        }
+      }
+    </script>
+
     <!-- AOS animations script -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
